...
            if viewModel.currentSet < viewModel.numSets {
                return "Complete Set"
            } else {
                return "Finish Workout"
            }
        }
        return "Finish"
    }

    private var finishButtonIcon: String {
        if viewModel.state == .resting {
            return "forward.fill"
        } else {
...
